DATA: Migrations added

--- a/ManagementSystem.API/appsettings.json
+++ b/ManagementSystem.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "host=localhost;username=postgres;port=5434;database=management_systemDb;password=qwerty"
+    }
 }
