--- a/ManagementSystem.API/ManagementSystem.API.csproj
+++ b/ManagementSystem.API/ManagementSystem.API.csproj
@@ -20,6 +20,7 @@
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Xeption" Version="2.6.0" />
     </ItemGroup>
 
 </Project>
