--- a/ManagementSystem.Web/ManagementSystem.Web.csproj
+++ b/ManagementSystem.Web/ManagementSystem.Web.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all"/>
+        <PackageReference Include="RESTFulSense" Version="2.17.0" />
     </ItemGroup>
 
 </Project>
