--- a/ManagementSystem.Web/ManagementSystem.Web.csproj
+++ b/ManagementSystem.Web/ManagementSystem.Web.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="RESTFulSense" Version="2.17.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Assignments\Exceptions\" />
+    </ItemGroup>
+
 </Project>
